# mikucli

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-codebase-retrieval.md  0002-explicit-skill-invocation.md
src/mikucli/: __init__.py  cli.py  config.py  console.py  diffing.py  json_actions.py  llm.py  logs.py  mcp_config.py  mcp_tools.py  memory.py  multi_agent.py  react.py  sensitive_paths.py  tools.py  workspace.py
src/mikucli/agent_runtime/: __init__.py  cancellation.py  contracts.py  messages.py  tool_execution.py
src/mikucli/bench/: __main__.py  models.py  runner.py  tasks.py
src/mikucli/cli_support/: __init__.py  commands.py  dashboard.py  evaluation.py  interactive.py  sessions.py
src/mikucli/codebase/: __init__.py  chunking.py  embeddings.py  files.py  formatting.py  index.py  service.py  types.py
src/mikucli/evaluation/: __init__.py
src/mikucli/mcp_runtime/: __init__.py  client.py  content.py  server.py  toolset.py  types.py
src/mikucli/memory/: __init__.py  compression.py  long_term.py  models.py  retrieval.py  session.py  utilities.py
src/mikucli/observability/: __init__.py  api.py  compare.py  eval_import.py  ids.py  models.py  (+5 more)
tests/: test_bench.py  test_cli.py  test_codebase.py  test_config.py  test_console.py  test_dashboard.py  test_interactive.py  test_json_actions.py  test_mcp_config.py  test_mcp_tools.py  test_memory.py  test_multi_agent.py  test_observability.py  test_react_memory.py  test_skills.py  test_structure.py  test_tools.py  test_workspace.py
(+27 files in other folders)
